<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_ignite"
            android:icon="@drawable/ic_fav"
            android:title="@string/menu_about_ignite" />

        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_sponsors"
            android:title="@string/menu_sponsors"
            />
        <item android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_signout"
            android:onClick="onClickSignOut"
            android:title="@string/menu_sign_out"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contactus"
                android:title="Team IGNITE" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback" />

            <item
                android:id="@+id/nav_about_app"
                android:title="@string/menu_about_app"
                android:icon="@drawable/ic_aboutapp"/>

        </menu>
    </item>


</menu>
