<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="44dp"
                                android:layout_weight="1"
                                android:src="@drawable/ic_clock" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="9"
                                android:padding="12dp"
                                android:text="11 oct 2019"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp"

                                android:textStyle="bold" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="Ignite 2k'19 welcomes you all!"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="12dp"
                            android:text="@string/about_ignite_info"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill_horizontal"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules1"

                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules2"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules3"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules4"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules5"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules6"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules7"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules8"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules9"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules10"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules11"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/ignite_rules12"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text="@string/White_space"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.core.widget.NestedScrollView>


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

                >

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@android:color/transparent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:contentDescription="@string/app_name"

                        android:scaleType="centerCrop"
                        android:src="@drawable/igg"
                        app:layout_collapseMode="parallax" />

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:title="Ignite 2k'19 welcomes you all!"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>


            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fav"
                app:elevation="6dp"
                app:layout_anchor="@id/app_bar_layout"
                app:layout_anchorGravity="bottom|right|end"
                app:pressedTranslationZ="12dp" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



